-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245781 | 13.0.4 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b03 |
| JDK-8231905 | 11.0.6-oracle | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8232738 | 11.0.6 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8239154 | openjdk8u252 | Zhengyu Gu | P3 | Resolved | Fixed | b03 |
| JDK-8236063 | openjdk8u242 | Zhengyu Gu | P3 | Resolved | Fixed | b05 |
| JDK-8232790 | 8u241 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b02 |
| JDK-8235005 | emb-8u241 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | team |
- backported by
-
JDK-8231905 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8232738 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8232790 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8235005 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8236063 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8239154 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
-
JDK-8245781 [Redo] jstat reports incorrect values for OU for CMS GC
-
- Resolved
-
- relates to
-
JDK-8227178 Backout of 8215523
-
- Resolved
-
-
JDK-8215523 jstat reports incorrect values for OU for CMS GC
-
- Resolved
-