8229420: [Redo] jstat reports incorrect values for OU for CMS GC

Reviewed-by: tschatzl, sgehwolf